// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
────────╭──────────────────────────────────────────────────────────────╮─────── 
       S│                         station help                         │FF · PR 
▼ statio│                                                              │qs] [▾] 
 [1] ○ c│  Ctrl-O     open/close project view                          │6 #70 ✓ 
 [2] - d│  Ctrl-Q     quit Station                                     │        
 [3] ○ p│  Ctrl-\\     split pane right                                 │  #73 ✓ 
 [4] + s│  Ctrl-^     split pane below (Ctrl-6)                        │        
 [5] ⠋ s│  Ctrl-]     focus next pane                                  │6 #76 … 
        │  Ctrl-/     close split pane (Ctrl-_)                        │        
▼ observ│  Enter/Sp   open project view on welcome                     │qs] [▾] 
 [6] x b│  Esc/↑↓     context menu close/move                          │   #8 ✓ 
 [7] ⠋ p│  Enter/Sp   context menu select                              │8 #16 … 
 [8] ○ t│                     station project view                     │-1 #4 ✓ 
        │  ↑/↓        move cursor                                      │        
▼ script│  ↵          open focused session                             │qs] [▾] 
 [9] ○ a│  tab        next session needing you                         │6 #5 x1 
 [a] ? m│  wheel      scroll project list                              │ -1 #10 
        │  1-9/a-z    open visible session                             │        
▼ empty-│  N/A/R/C/F/P  new/add/rename/fold/fork/settings              │qs] [▾] 
        ╰──────────────────────────────────────────────────────────────╯        
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
                                                                                
search: apiject  0 sessions                                       [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the collapse project sheet 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
┌──────────────────────────────────────────────────────────────────────────────┐
│ Collapse Project                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                               │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the collapse project sheet windows a long list 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│ Collapse Project                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│ 5 filler-0 healthy                                                           │
│ 6 filler-1 healthy                                                           │
│ 7 filler-2 healthy                                                           │
│ 8 filler-3 healthy                                                           │
│ 9 filler-4 healthy                                                           │
│ a filler-5 healthy                                                           │
│ b filler-6 healthy                                                           │
│ c filler-7 healthy                                                           │
│ d filler-8 healthy                                                           │
│ e filler-9 healthy                                                           │
│ f filler-10 healthy                                                          │
│ g filler-11 healthy                                                          │
│ h filler-12 healthy                                                          │
│ i filler-13 healthy                                                          │
│                                                                              │
│ ↑↓ move   ↵ select   1-18 of 25   Esc cancel                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project settings picker sheet 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
┌──────────────────────────────────────────────────────────────────────────────┐
│ Project Settings                                                             │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                               │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project settings panel 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │PR 
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │✓1 codex ● update v0.3.0 → v0.4.0            │ ✓ 
 [2│  Remove project          │ 2 opencode unknown                          │   
 [3│                          │                                             │ ✓ 
 [4│                          │ ✓ current · ↑↓ ↵ · 1-9/a-z                  │   
 [5│                          │                                             │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings remove pane 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │PR 
▼ s│ station                  │ Remove project                              │▾] 
 [1│  Default agent           │ Removes it from Station.                    │ ✓ 
 [2│▸ Remove project          │ Worktrees & files stay on disk.             │   
 [3│                          │                                             │ ✓ 
 [4│                          │ Type "delete station" to confirm            │   
 [5│                          │ ▸ |delete station                           │ … 
   │                          │                                             │   
▼ o│                          │ [ Remove project (R) ]                      │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
   │                          │                                             │   
▼ e│ ←/esc back                                                             │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings optimistic default 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
───┌────────────────────────────────────────────────────────────────────────┐── 
   │ Project settings                                                       │PR 
▼ s│ station                  │ Default agent                               │▾] 
 [1│▸ Default agent           │ 1 codex ● update v0.3.0 → v0.4.0            │ ✓ 
 [2│  Remove project          │✓2 opencode unknown                 updating…│   
 [3│                          │                                             │ ✓ 
 [4│                          │ ✓ current · ↑↓ ↵ · 1-9/a-z                  │   
 [5│                          │                                             │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove slot sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐code  idle           +14 -6 #5 x1 
│ Select session to delete                   │code  unknown           +3 -1 #10 
│                                            │                                  
│ ↑↓ move · ↵ choose · slot or click         │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove confirm sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
┌────────────────────────────────────────────┐                                  
│ Delete session?                            │                    [sh] [qs] [▾] 
│ Session  cli-help-man                      │code  idle           +14 -6 #5 x1 
│ Removes agent, worktree, and panes.        │code  unknown           +3 -1 #10 
│                                            │                                  
│ Yes (y)     No (n)                         │                    [sh] [qs] [▾] 
│ Esc/Enter:cancel                           │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the external agent removal information 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓
┌──────────────────────────────────────────────────────────────────┐
│ Cannot delete worktree                                           │h] [qs] [▾]
│ This agent was started outside Station.                          │14 -6 #5 x1
│ Station can see its status, but cannot stop it.                  │  +3 -1 #10
│                                                                  │
│ Stop or remove it from its original terminal or external tooling.│h] [qs] [▾]
│                                                                  │
│ Esc/Enter:close                                                  │───────────
└──────────────────────────────────────────────────────────────────┘/esc:close
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
                                                                                
Rename: ↑↓ move · ↵ choose · 1-9/a-z or click                     [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown  x 1 exited  ○ 0 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                        AGENT     STATUS                DIFF · PR 
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                     codex     Agent needs appro… +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ⠋ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs appro… +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       |hook-scope                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the fork slot sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾] 
┌────────────────────────────────────────────┐code  idle           +14 -6 #5 x1 
│ Select session to fork                     │code  unknown           +3 -1 #10 
│                                            │                                  
│ ↑↓ move · ↵ choose · slot or click         │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the fork details sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
┌────────────────────────────────────────────┐code  idle             +1 -1 #4 ✓ 
│ Fork Session                               │                                  
│ Source   station · cli-help-man            │                    [sh] [qs] [▾] 
│ > Branch cli-help-man-fork|                │code  idle           +14 -6 #5 x1 
│   Copy   [x] uncommitted changes           │code  unknown           +3 -1 #10 
│ Source keeps running — copy is read-only.  │                                  
│                                            │                    [sh] [qs] [▾] 
│ Fork (enter)                               │                                  
│ ↑↓:field space:toggle enter:fork esc:back  │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│                                                                              │
│ Project    station                                                           │
│ Name       station-XXXXXX                                                    │
│ Agent      codex unknown                                                     │
│                                                                              │
│▸ Create session                                                              │
│ ↑↓ field  ↵ choose  N/P/A  Esc:cancel                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│                                                                              │
│ Project    station                                                           │
│ Name       |station-XXXXXX                                                   │
│                                                                              │
│ Enter:save   Esc:back                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc back                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       codex     no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex ● update v0.3.0 → v0.4.0                                             │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ↑↓ move   ↵ select   1-9/a-z jump   Esc back                                 │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project default agent picker 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓

┌──────────────────────────────────────────────────────────────────────────────┐
│ Select default agent for station                                             │
│                                                                              │
│✓1 codex ● update v0.3.0 → v0.4.0                                             │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ✓ current   ↑↓ move   ↵ select   1-9/a-z jump   Esc cancel                   │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"                                                                                
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
─────────────────────────────────────────────────────────────────────────────── 
       SESSION                            AGENT     STATUS            DIFF · PR 
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the first project sheet 1`] = `
"                                                                                
─────────────────────────────────────────────────────────────────────────────── 
                                                                                
Add your first project.                                                         
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Your First Project                                                       │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the widget settings panel 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffe┌──────────────────────────────────────────────┐          #73 ✓
 [4] + session-r│ widgets                                      │
 [5] ⠋ station-o│ saved to config.toml                         │ +412 -96 #76 …
                │ ▸ [on ] time                               × │
▼ observer  3 se│   [off] weather NYC                        × │  [sh] [qs] [▾]
 [6] x batch-exp│   [on ] moon                               × │           #8 ✓
 [7] ⠋ provider-│   [ + add widget ]                           │   +32 -8 #16 …
 [8] ○ trace-bun│ ↵ toggle   [ ] reorder   x remove   a add   e│     +1 -1 #4 ✓
                └──────────────────────────────────────────────┘
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾]
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10

▼ empty-project  0 sessions                                       [sh] [qs] [▾]

───────────────────────────────────────────────────────────────────────────────
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close
"
`;

exports[`modal flow golden frames renders the widget settings picker 1`] = `
"
FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle
───────────────────────────────────────────────────────────────────────────────
       SESSION                            AGENT     STATUS            DIFF · PR
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       codex     no agent
 [3] ○ pty-buffe┌──────────────────────────────────────────────┐          #73 ✓
 [4] + session-r│ add widget                                   │
 [5] ⠋ station-o│ weather and tz require config.toml           │ +412 -96 #76 …
                │ ▸ time                                       │
▼ observer  3 se│   fleet                                      │  [sh] [qs] [▾]
 [6] x batch-exp│   open PRs                                   │           #8 ✓
 [7] ⠋ provider-│   moon                                       │   +32 -8 #16 …
 [8] ○ trace-bun│ ↵ add   esc back                             │     +1 -1 #4 ✓
                └──────────────────────────────────────────────┘
▼ scripts  2 sessions · 2 agents                                  [sh] [qs] [▾]
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10

▼ empty-project  0 sessions                                       [sh] [qs] [▾]

───────────────────────────────────────────────────────────────────────────────
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close
"
`;
